--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -264,3 +264,13 @@
 	Note = {Accessed: 2018-01-20},
 	Title = {New Jersey Division of Consumer Affairs Obtains Settlement with Developer of Bitcoin-Mining Software Found to Have Accessed New Jersey Computers Without Users Knowledge or Consent},
 	Year = {2015}}
+	
+	
+	
+	
+@misc{malwarebytescoinhive,
+	Author = {malwarebytes},
+	Howpublished = {\url{https://blog.malwarebytes.com/cybercrime/2017/11/persistent-drive-by-cryptomining-coming-to-a-browser-near-you/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Persistent drive-by cryptomining coming to a browser near you},
+	Year = {2017}}
