--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -82,7 +82,7 @@ As discussed before, the website administrator can add the script to the webpage
 
 \subsection{Ad network} 
 
-Advertisement publishers can inject mining scripts to any website they have ad space in instead of showing legitimate ads because the implementation simply requires JavaScript. In one case, Malwarebytes researchers found an adult website advertising network injecting Coinhive via a hidden browser window that persisted in the background. (CITE: https://blog.malwarebytes.com/cybercrime/2017/11/persistent-drive-by-cryptomining-coming-to-a-browser-near-you/)
+Advertisement publishers can inject mining scripts to any website they have ad space in instead of showing legitimate ads because the implementation simply requires JavaScript. In one case, Malwarebytes researchers found an adult website advertising network injecting Coinhive via a hidden browser window that persisted in the background \cite{malwarebytescoinhive}.
 
 \subsection{Breached CDN / website} 
 An attacker can hack a service provider's codebase and inject their mining code to the one or many websites at once, simply turning access to money. An example of this type of attack, discovered on Thanksgiving Day by security researcher Troy Mursch, occurred to LiveHelpNow's SDK that resulted in unsolicited mining when accessing their chat system through all websites using the chat support service, including well-known brands Crucial Memory and Everlast.~\cite{chatsupporthack}.
