--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Jeremy Clark at 2018-01-22 09:59:22 -0500 
+%% Created for Jeremy Clark at 2018-01-22 12:19:20 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{MMLN17,
+	Author = {{Miller}, A. and {Moeser}, M. and {Lee}, K. and {Narayanan}, A.},
+	Date-Added = {2018-01-22 17:19:19 +0000},
+	Date-Modified = {2018-01-22 17:19:19 +0000},
+	Institution = {arXiv},
+	Title = {{An Empirical Analysis of Linkability in the Monero Blockchain}},
+	Year = 2017}
 
 @book{narayanan2016,
 	Author = {Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
@@ -264,10 +272,7 @@
 	Note = {Accessed: 2018-01-20},
 	Title = {New Jersey Division of Consumer Affairs Obtains Settlement with Developer of Bitcoin-Mining Software Found to Have Accessed New Jersey Computers Without Users Knowledge or Consent},
 	Year = {2015}}
-	
-	
-	
-	
+
 @misc{malwarebytescoinhive,
 	Author = {malwarebytes},
 	Howpublished = {\url{https://blog.malwarebytes.com/cybercrime/2017/11/persistent-drive-by-cryptomining-coming-to-a-browser-near-you/}},
