--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -23,7 +23,8 @@
 
 %====================================================================
 
-\input{sections/body}
+\input{sections/intro}
+%\input{sections/body}
 
 %====================================================================
 
