separate intro and body

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -24,7 +24,7 @@
 %====================================================================
 
 \input{sections/intro}
-%\input{sections/body}
+\input{sections/body}
 
 %====================================================================
 
