add back some recent changes

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -279,3 +279,11 @@
 	Note = {Accessed: 2018-01-20},
 	Title = {Persistent drive-by cryptomining coming to a browser near you},
 	Year = {2017}}
+	
+	
+@misc{badpacketspublicwww,
+	Author = {Troy Mursch},
+	Howpublished = {\url{https://badpackets.net/cryptojacking-malware-coinhive-found-on-30000-websites/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Cryptojacking malware Coinhive found on 30,000+ websites},
+	Year = {2017}}
