separate experiment charts

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -89,7 +89,6 @@ This helped Coinhive copycats gain some market attention as they came online lat
 \end{figure}
 
 
-
 \subsection{Clientside Impact}
 
 \begin{figure}[t]
@@ -116,13 +115,21 @@ Coinhive developers estimate a monthly revenue of about 0.3 XMR (~\$101) for a w
 Through correspondence with one of the biggest coinhive campaigns operator, which was a domain parking service and was running coinhive script on over 11,000 parked websites, conducted over period of three months, we were able to gather some data to estimate profitability for websites with high traffic but short visits \footnote{Collaborated with Faraz Fallahi \url{https://github.com/fffaraz}}. Over 97,000 users visited these websites for an average of 24 seconds per session.
 
 
-%TODO: Separate these charts
-
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/coinhive_experiment_11k.png}
-\caption{Results from Coinhive and Google Analytics dashboards}
+\includegraphics[width=\linewidth]{figures/experiment_coinhive_results.png}
+\caption{Coinhive dashboard showing the earnings over the course of 3 months}
 \end{figure}
+
+
+
+%TODO: THIS CAN BE REMOVED AS WE TALK ABOUT THE NUMBERS IN THE TEXT
+\begin{figure}[t]
+\centering
+\includegraphics[width=\linewidth]{figures/experiment_analytics_results.png}
+\caption{Google Analytics dashboard}
+\end{figure}
+
 
 This experiment showed that even though the number of users visiting was significant, the profit from those visits was below expectations. For the period examined, the revenue was 0.02417 Monero, which at the time of writing is equivalent to 7.69 USD.
 
