soft edit on ethics, chart typo fix and some other changes

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -92,6 +92,13 @@
 	Title = {Ads dont work so websites are using your electricity to pay the bills},
 	Year = {2017}}
 
+@misc{httparchiveminingimpact,
+	Author = {Doug Sillars},
+	Howpublished = {\url{https://discuss.httparchive.org/t/the-performance-impact-of-cryptocurrency-mining-on-the-web/1126}},
+	Note = {Accessed: 2017-12-20},
+	Title = {The Performance Impact of Cryptocurrency Mining on the Web},
+	Year = {2017}}
+
 @misc{chatsupporthack,
 	Author = {LiveHelpNow},
 	Howpublished = {\url{https://blog.livehelpnow.net/security-incident-nov-23rd-2017/}},
