--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -50,63 +50,58 @@ A user's webtraffic is often routed through intermediaries that may have plainte
 
 \section{Measurements}
 
-\subsection{Prevalence}
-
-In order to find out how browser mining is changing internet use, the approach taken was to find measurements of the impact it causes. One approach was to see what the search interest over time for such services is. 
+\subsection{Prevalence of Coinhive and alternatives}
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/usage_over_time2.png}
-\caption{Google Trend - Search interest over last 12 months}
+\includegraphics[width=0.9\linewidth]{figures/usage_over_time2.png}
+\caption{Google Trend over last 12 months: there has been more interest in Coinhive than the broader, related search term ``Browser mining''. Comparing to other services offering Monero browser mining API, Coinhive had the advantage of being the first to offer the service. \label{fig:trend}}
 \end{figure}
 
-It seems that there has been more interest in Coinhive than the broader, related search term ``Browser mining''. Comparing to other services offering Monero browser mining API, Coinhive had the advantage of being the first to offer the service, hence more interest at the time of writing. There has not been enough data and evidence of usage for other services to analyze, thus the focus of this paper is on the impact of Coinhive scripts on the internet. 
-
-The next step was to see how many websites are deploying Coinhive scripts by using internet scanners such as Zmap\footnote{\url{https://zmap.io}}. It was of more interest to see what the trend of this usage was, and for this purpose historical data was required. 
-
-\begin{lstlisting}[caption={BigQuery SQL query to find websites using coinhive miner script using censys.io datasets},label={lst:bigquery},language=sql,linewidth=\linewidth]
-
+\begin{figure}[t]
+\begin{tabular}{c}
+\begin{lstlisting}[language=sql]
 SELECT domain, tags, p80.http_www.get.headers.content_language, p80.http_www.get.headers.server, p80.http.get.headers.x_powered_by, p80.http.get.title, p80.http_www.get.body as wwwbody, p80.http.get.body as plainbody 
 FROM censys-io.domain_public.20171123
 WHERE STRPOS(p80.http.get.body, coinhive.min.js) > 0 or STRPOS(p80.http_www.get.body, coinhive.min.js) >0)
-
 \end{lstlisting}
-
-Using censys.io BigQuery dataset ~\cite{censys15}, it is feasible to query for such trends. The method used to gather these data is simply looking for the `coinhive.min.js` script within the body of the website page. These findings are corroborated by another search engine, PublicWWW, which indexes the source code of publicly available websites. Using PublicWWW's dataset, over 30,000 websites were found to have the `coinhive.min.js` library~\cite{badpacketspublicwww}.
- 
-However, cryptojacking services are evolving to use obfuscated JavaScript and randomized URLs to evade detection\footnote{\url{https://twitter.com/bad_packets/status/940333744035999744}}. An example of these methods can be found in the cryptojacking service provider called Minr. In this case, the script is automatically obfuscated for users implementing the code. In addition, the domain names used by Minr frequently change to circumvent blocklists and anti-malware software.
+\end{tabular}
+\caption{A BigQuery SQL query to find websites that embed the CoinHive script using a dataset of the top one million sites from censys.io. \label{lst:bigquery}}
+\end{figure}
 
 \begin{figure}[t]
 \centering
 \includegraphics[width=\linewidth]{figures/usage_of_coinhive_over_time.png}
-\caption{Usage of CoinHive Miner scripts in top 1 million websites over time}
+\caption{The number of instances of the Coinhive miner scripts found using the query in Figure~\ref{lst:bigquery} in top one million websites over a three month period beginning with the release of Coinhive in September 2017.\label{fig:topmil}}
 \end{figure}
 
+We focus on measuring the prevalence of Coinhive scripts deployed on internet sites. We use the censys.io BigQuery dataset ~\cite{censys15} for the top million sites indexed by Zmap.\footnote{\url{https://zmap.io}} We simply look for the \texttt{coinhive.min.js} script within the body of the website page. The query we use is in Figure~\ref{lst:bigquery} and the results over a two month period are provided in Figure~\ref{fig:topmil}. These findings are corroborated by another search engine, PublicWWW, which indexes the source code of publicly available websites. Using PublicWWW's dataset, over 30,000 websites were found to have the \texttt{coinhive.min.js} library~\cite{badpacketspublicwww}. As seen from our data in Figure~\ref{fig:topmil}, the adoption of this script was substantial in the first days of its release. However, progress slowed down at the same time as ad-blockers and organizations started to block Coinhive's website. The initial purpose of this service, as claimed by Coinhive, was to replace ads and cover server costs for webmasters. As the service did not require that website's received user consent before beginning to mine, it started to be used maliciously in user's browsers. This type of usage resulted in Coinhive being included in some company's top-10 most wanted malware list~\cite{checkpoint}.
 
-As seen in the chart above, the adoption of this script was substantial in the first days of its release. However, progress slowed down as ad-blockers and organizations started to block Coinhive's website. The initial purpose of this service, as claimed by Coinhive, was to replace ads and cover server costs for webmasters. As the service did not require that website's received user consent before beginning to mine, it started to be used maliciously in user`s browsers. This type of usage resulted in Coinhive being included in the top-10 most wanted malware list after some famous ransomware ~\cite{checkpoint}. 
+This type of measurement will become less accurate moving forward. Cryptojacking services are evolving to use obfuscated JavaScript and randomized URLs to evade detection\footnote{\url{https://twitter.com/bad_packets/status/940333744035999744}}. An example of these methods can be found in the cryptojacking service provider called Minr. In this case, the script is automatically obfuscated for users implementing the code. In addition, the domain names used by Minr frequently change to circumvent blocklists and anti-malware software.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/coinhive_blocked.png}
-\caption{Our university has blocked coinhive.com website}
+\includegraphics[width=0.9\linewidth]{figures/coinhive_blocked.png}
+\caption{Our university has categorized the coinhive.com website as malicious and has blocked it.\label{fig:concordia}}
 \end{figure}
-
-
-This helped Coinhive copycats gain some market attention as they came online late in 2017. Increased competition pushed Coinhive developers to think of other methods that would be more focused on user consent and bypassing blockage for running such scripts.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/non-coinhive-miners.png}
-	\caption{Copycats of coinhive}
+\includegraphics[width=0.9\linewidth]{figures/non-coinhive-miners.png}
+\caption{Share of websites using a Coinhive alternative as gathered from PublicWWW~\cite{badpacketspublicwww}.\label{fig:copycat}}
 \end{figure}
+
+Coinhive has begun to be blocked by enterprises. One example is shown in Figure~\ref{fig:concordia}. This blocking seems to have sent Coinhive operators to lesser known alternatives with the same or similar functionality (see Figure~\ref{fig:copycats}). Coinhive has also reacted by focusing on adding user consent and legitimizing the use of cryptojacking.
+
+
 
 
 \subsection{Clientside Impact}
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/usage_of_authedmine_over_time.png}
-	\caption{Usage of AuthedMine Miner scripts in top 1million websites over time}
+\includegraphics[width=0.9\linewidth]{figures/usage_of_authedmine_over_time.png}
+	\caption{Usage of AuthedMine Miner scripts in top 1million websites over time.}
 \end{figure}
 
 Coinhive introduced another domain and service called ``Authedmine'' , which requires user`s consent to start mining in the browser. This service did not get the same attention as the original service, but it did inspire discussions regarding the ethics of such services, which is covered in Discussion section of this paper. (Clickjacking) 
