--- a/Paper/setup/packages.tex
+++ b/Paper/setup/packages.tex
@@ -63,6 +63,10 @@
     stringstyle=\color[rgb]{0.627,0.126,0.941},
 }
 
+\lstdefinestyle{interfaces}{
+  float=t,
+  floatplacement=t}
+
 %------------------------END----------------------%  
   
 
